# hyperadar

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  HANDOFF.md  PRODUCT.md  README.md  agent_catalog.json  tickets.md
.github/workflows/: daily-radar-refresh.yml  run-hyperadar-agent.yml  test-rombot-api.yml
.impeccable/: design.json
apps/web/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/web/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
apps/web/app/agent/[handle]/: page.tsx
apps/web/app/api/daily-digest/: route.ts
apps/web/app/api/port/webhook/: route.ts
apps/web/app/api/reactions/: route.ts
apps/web/app/components/: Comments.tsx  ReactionBar.tsx  ReactionStatusProvider.tsx  Sparkline.tsx
apps/web/app/digest/[week]/: page.tsx
apps/web/app/project/[slug]/: page.tsx
apps/web/app/waves/: page.tsx
apps/web/lib/: agentCatalog.test.ts  agentCatalog.ts  auth.ts  commentOperation.test.ts  commentOperation.ts  commentResponse.test.ts  commentResponse.ts  contentTruth.test.ts  dailyDigest.test.ts  dailyDigest.ts  feed.test.ts  feed.ts  mongo.test.ts  mongo.ts  mutationGuard.test.ts  mutationGuard.ts  objectId.ts  pagination.test.ts  pagination.ts  postQueries.test.ts  postQueries.ts  publication.test.ts  publication.ts  ranking.test.ts  ranking.ts  reactionLabel.test.ts  reactionLabel.ts  reactionPersistence.test.ts  reactionPersistence.ts  routes.test.ts  routes.ts  share.test.ts  share.ts  shareOperation.test.ts  shareOperation.ts  signalSeries.test.ts  signalSeries.ts  slug.test.ts  slug.ts  sparkline.test.ts  (+7 more)
docs/: README.md  announcement.md  deployment-checklist.md
docs/adr/: 0001-port-workflow-agent-execution.md  0002-pymongo-async-client-reuse.md  0003-breakout-prediction-momentum-score.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/reference/: cross-cutting-patterns.md  mongodb-agent-memory.md  mongodb-connection.md  mongodb-schema-and-patterns.md  mongodb-search-and-ai.md  port-blueprints-actions-scorecards.md  port-ocean-best-practices.md  source-constraints-and-costs.md  sources.md
docs/research/: 2026-07-12-youtube-source-investigation.md  2026-07-16-oss-launch-best-practices.md  2026-07-16-similar-projects-and-oss-positioning.md  2026-07-19-source-quality-improvements.md
docs/specs/: 2026-07-09-hyperadar-design.md  2026-07-09-hyperadar-prd.md
integrations/: conftest.py  pytest.ini
integrations/_shared/: __init__.py  agent_catalog.py  daily_digest.py  embeddings.py  episodic_memory.py  evidence_copy.py  hype_waves.py  momentum.py  mongo.py  port_client.py  publication_identity.py  runner.py  seed_episodes.py  slug.py  test_agents.py  test_daily_digest.py  test_embeddings_voyage.py  test_episodic_memory.py  test_hype_waves.py  test_momentum.py  test_multi_source.py  test_slug.py  test_source_truth.py  write_post.py
integrations/community_ask/: agent.py  main.py  pyproject.toml  source.py
integrations/github_radar/: agent.py  conftest.py  embeddings.py  github_source.py  main.py  mongo.py  port_client.py  pyproject.toml  test_agent_legacy_gates.py  test_fake_star_filter.py  test_github_radar_e2e.py  test_momentum_source.py  test_rate_limiting.py  test_tracker.py  test_web_seams.py  tracker.py
integrations/hidden_gems/: agent.py  main.py  pyproject.toml  source.py  test_source.py  test_tracker.py  tracker.py
integrations/reddit_pulse/: agent.py  main.py  pyproject.toml  reddit_source.py  test_reddit_source.py
integrations/weekly_digest/: agent.py  main.py  pyproject.toml
integrations/youtube_trends/: agent.py  main.py  pyproject.toml  source.py  test_view_velocity.py  view_velocity.py
scripts/: daily_run.sh  migrate_embeddings.py  migrate_publication_state.py  report_port_workflow_run.py  setup_mongodb.py  setup_port.py  setup_port_catalog.py  setup_port_workflows.py  test_migrate_publication_state.py  test_setup_mongodb.py  test_setup_port_catalog.py  test_setup_port_workflows.py  update_search_indexes.py
(+3 files in other folders)
