[project]
name = "github-radar"
version = "0.1.0"
description = "HypeRadar @github-radar agent-creator: scrapes GitHub trending, scores via Grove, writes MongoDB + Port."
requires-python = ">=3.11"
dependencies = [
  "deepagents",
  "langchain-openai",
  "langgraph",
  "langgraph-checkpoint-mongodb",
  "pymongo>=4.16",
  "httpx",
  "python-dotenv",
  "sentence-transformers",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff==0.15.12"]

# pytest config lives in integrations/pytest.ini so the shared conftest.py
# (db fixture, env guard) is loaded for every agent package. See that file.
