[project]
name = "hidden-gems"
version = "0.1.0"
description = "HypeRadar @hidden-gems agent — finds hidden gems via HN + low-star GitHub repos."
requires-python = ">=3.11"
dependencies = [
  "deepagents",
  "langchain-openai",
  "langgraph",
  "langgraph-checkpoint-mongodb",
  "pymongo>=4.16",
  "httpx",
  "python-dotenv",
  "sentence-transformers",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]
