[project]
name = "reddit-pulse"
version = "0.1.0"
description = "HypeRadar @reddit-pulse agent — scrapes Reddit via Bright Data, scores, posts."
requires-python = ">=3.11"
dependencies = [
  "deepagents",
  "langchain-openai",
  "langgraph",
  "langgraph-checkpoint-mongodb",
  "pymongo>=4.16",
  "httpx",
  "python-dotenv",
  "sentence-transformers",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]
